--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,12 +30,15 @@ android {
         production {
             dimension "server"
             resValue "string", "app_name", "Currency Calculator"
+            resValue "string", "FLAGS_URL", "https://www.countryflags.io/%1s/flat/64.png"
+            buildConfigField("String", "BASE_URL", "\"https://hiring.revolut.codes/api/android/\"")
             versionCode 1
         }
         staging {
             dimension "server"
             applicationIdSuffix ".dev"
-            resValue "string", "app_name", "Currency Calculator - staging"
+            resValue "string", "FLAGS_URL", "https://www.countryflags.io/%1s/flat/64.png"
+            buildConfigField("String", "BASE_URL", "\"https://hiring.revolut.codes/api/android/\"")
             versionCode 1
         }
     }
@@ -69,4 +72,21 @@ dependencies {
     //di
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+//    //FlagKit
+//    implementation 'com.jwang123.flagkit:flagkit:1.0'
+    //Circle Image View
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //rxJava
+    implementation "io.reactivex.rxjava3:rxjava:3.0.0"
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    //network
+    implementation 'com.squareup.retrofit2:retrofit:2.7.2'
+    implementation 'com.squareup.okhttp3:okhttp:4.4.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0-RC8"
+
 }
