--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,17 +59,14 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.preference:preference:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    //mvvm lib
+    implementation 'androidx.preference:preference:1.1.0'//mvvm lib
     implementation 'com.github.Luteoos:Android--MVVMLib:4.0.0'
     //preference support
     implementation "androidx.preference:preference-ktx:1.1.0"
     //logger
     implementation 'com.jakewharton.timber:timber:4.7.1'
     //di
+    implementation "org.koin:koin-core:$koin_version"
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
     //Glide
@@ -88,5 +85,12 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation "com.github.akarnokd:rxjava3-retrofit-adapter:3.0.0-RC8"
+
+    //test implementations
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    testImplementation "org.koin:koin-test:$koin_version"
+
 
 }
