--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,8 +73,8 @@ dependencies {
     //Glide
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-//    //FlagKit
-//    implementation 'com.jwang123.flagkit:flagkit:1.0'
+    //rxbinding
+    implementation 'com.jakewharton.rxbinding3:rxbinding:3.1.0'
     //Circle Image View
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //rxJava
