--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,6 @@ android {
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
     }
 
     buildTypes {
@@ -30,7 +29,7 @@ android {
         production {
             dimension "server"
             resValue "string", "app_name", "Currency Calculator"
-            resValue "string", "FLAGS_URL", "https://raw.githubusercontent.com/transferwise/currency-flags/master/src/flags/%1s.png"
+            resValue "string", "FLAGS_URL", "\"https://raw.githubusercontent.com/transferwise/currency-flags/master/src/flags/%1s.png\""
             buildConfigField("String", "BASE_URL", "\"https://hiring.revolut.codes/api/android/\"")
             versionCode 1
         }
@@ -38,7 +37,7 @@ android {
             dimension "server"
             applicationIdSuffix ".dev"
             resValue "string", "app_name", "Currency Calculator - staging"
-            resValue "string", "FLAGS_URL", "https://raw.githubusercontent.com/transferwise/currency-flags/master/src/flags/%1s.png"
+            resValue "string", "FLAGS_URL", "\"https://raw.githubusercontent.com/transferwise/currency-flags/master/src/flags/%1s.png\""
             buildConfigField("String", "BASE_URL", "\"https://hiring.revolut.codes/api/android/\"")
             versionCode 1
         }
@@ -94,6 +93,4 @@ dependencies {
     testImplementation "org.koin:koin-test:$koin_version"
     testImplementation 'androidx.arch.core:core-testing:2.1.0'
     testImplementation 'com.jraska.livedata:testing-ktx:1.1.1'
-
-
 }
