--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,18 +6,17 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name="io.github.luteoos.currencycalc.Application"
+        android:name=".Application"
         tools:replace="android:allowBackup"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
+        android:theme="@style/AppTheme">
 
         <activity
-            android:name="io.github.luteoos.currencycalc.view.activity.MainScreenActivity"
+            android:name=".view.activity.MainScreenActivity"
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="stateAlwaysVisible">
             <intent-filter>
