--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,14 +55,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta4'
-    implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
-    implementation 'androidx.preference:preference:1.1.0'//mvvm lib
+    //mvvm lib
     implementation 'com.github.Luteoos:Android--MVVMLib:4.0.0'
-    //preference support
-    implementation "androidx.preference:preference-ktx:1.1.0"
     //logger
     implementation 'com.jakewharton.timber:timber:4.7.1'
     //di
